# prj_tutore

./: corpus_court.txt  notes.txt  readme.md  traitement.py
corpus/: main.py  pyproject.toml
experimentation/: annotation.py  main_pipeline.py  pos_id_results.csv  pyproject.toml  test.py  test_ablation_id.py  test_alignment.py  test_context_impact.py  test_id_context.py  test_pos_id.py
latex/: chapitre1.tex  chapitre2.tex  chapitre3.tex  conclusion.tex  intro.tex  main.tex  references.bib  resume.tex
