[project]
name = "corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.7.0",
    "en-core-web-sm",
    "evaluate>=0.4.6",
    "spacy[apple]",
    "transformers",
    "torch",
    "scikit-learn",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
